--- a/src/Views/templates/TableDevices.html.twig
+++ b/src/Views/templates/TableDevices.html.twig
@@ -10,12 +10,17 @@
                 <th>Vendor</th>
                 <th>Model</th>
                 <th>ScreenSize</th>
+                <th>Operations</th>
             </tr>
             {% for device in devices %}
                 <tr>
                     <td>{{ device.name }}</td>
                     <td>{{ device.model }}</td>
                     <td>{{ device.screenSize }}</td>
+                    <td><a href="index.php?controller=device&action=updateDevice&id={{ device.id }}">Update</a>
+                    <a href="index.php?controller=device&action=deleteDevice&
+                    id={{ device.id }}">Delete</a>
+                    </td>
                 </tr>
             {% endfor %}
         </table>
