crud vendor and device works

--- a/src/Views/templates/TableDevices.html.twig
+++ b/src/Views/templates/TableDevices.html.twig
@@ -5,7 +5,9 @@
         <title></title>
     </head>
     <body>
+
         <table border="1" width="100%">
+            <caption>Devices</caption>
             <tr>
                 <th>Vendor</th>
                 <th>Model</th>
@@ -26,6 +28,7 @@
         </table>
 
     <a href="index.php?controller=device&action=addDevice">New device</a>
+    <a href="index.php?controller=vendor&action=index">Vendors</a>
     <a href="/"> Main</a>
     </body>
 </html>
