--- a/src/Views/templates/confirmDelete.html.twig
+++ b/src/Views/templates/confirmDelete.html.twig
@@ -13,8 +13,8 @@
         <input type="submit" value="Delete">
 
         <input type="hidden" name="confirmedId" value="{{ id }}">
-        <input type="hidden" name="controller" value="device">
-        <input type="hidden" name="action" value="deleteDevice">
+        <input type="hidden" name="controller" value="{{ controller }}">
+        <input type="hidden" name="action" value="{{ action }}">
     </form>
 
 </body>
