crud of deliveries works

--- a/src/Views/templates/TableDevices.html.twig
+++ b/src/Views/templates/TableDevices.html.twig
@@ -28,7 +28,8 @@
         </table>
 
     <a href="index.php?controller=device&action=addDevice">New device</a>
-    <a href="index.php?controller=vendor&action=index">Vendors</a>
+    <a href="index.php?controller=vendor">Vendors</a>
+    <a href="index.php?controller=delivery">Deliveries</a>
     <a href="/"> Main</a>
     </body>
 </html>
