--- a/src/Views/templates/Delivery/TableDelivery.html.twig
+++ b/src/Views/templates/Delivery/TableDelivery.html.twig
@@ -30,5 +30,6 @@
 <a href="index.php?controller=delivery&action=addDelivery">New delivery</a>
 {#<a href="index.php?controller=vendor&action=index">Vendors</a>#}
 <a href="/"> Main</a>
+<div>    Note: In this case vendors are suppliers</div>
 </body>
 </html>
